// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourceGraphService should serialize treaty and remove unknown attribute 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "treatyComment": Object {
        "xsd:string": Array [],
      },
      "treatyCommentAboutValidity": Object {
        "xsd:string": Array [],
      },
      "treatyLimitDateForSignature": Object {
        "xsd:date": Array [],
      },
      "treatyLimitDateForSignatureComment": Object {
        "xsd:string": Array [],
      },
      "treatyNotificationPublishedIn": Object {
        "rdfs:Resource": Array [],
      },
      "treatyNotificationPublishedInLabel": Object {
        "xsd:string": Array [],
      },
    },
    "references": Object {
      "treatyAppliesEULegalResource": Array [
        "http://publications.europa.eu/resource/cellar/d67cf7eb-de13-4bcb-9959-0dc0107e102e",
      ],
    },
    "type": "TreatyProcess",
    "uri": "https://fedlex.data.admin.ch/treatyProcess/9999/5414",
  },
  "included": Array [
    Object {
      "type": "EULegalResource",
      "uri": "http://publications.europa.eu/resource/cellar/d67cf7eb-de13-4bcb-9959-0dc0107e102e",
    },
  ],
}
`;

exports[`ResourceGraphService should serialize treaty process 1 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "bilateral": Object {
        "xsd:boolean": true,
      },
      "confidentialTreaty": Object {
        "xsd:boolean": false,
      },
      "treatyComment": Object {
        "xsd:string": Array [],
      },
      "treatyCommentAboutValidity": Object {
        "xsd:string": Array [],
      },
      "treatyNotificationPublishedIn": Object {
        "rdfs:Resource": Array [],
      },
      "treatyNotificationPublishedInLabel": Object {
        "xsd:string": Array [],
      },
      "treatyProcessIdentificationInCms": Object {
        "xsd:string": Array [],
      },
    },
    "references": Object {
      "treatyProcessHasResultingTreatyDocument": Array [
        "http://resource/TreatyDocument/3-1591712645034",
        "http://resource/TreatyDocument/8-1591712649311",
      ],
      "treatyProcessHasTask": Array [
        "http://resource/TreatySignature/1-1591712631407",
        "http://resource/EntryIntoForce/2-1591712631410",
      ],
      "treatyType": "https://fedlex.data.admin.ch/vocabulary/treaty-type/1",
    },
    "type": "TreatyProcess",
    "uri": "http://resource/TreatyProcess/0-1591712631312",
  },
  "included": Array [
    Object {
      "references": Object {
        "typeDocument": "https://fedlex.data.admin.ch/vocabulary/resource-type/31",
      },
      "type": "TreatyDocument",
      "uri": "http://resource/TreatyDocument/3-1591712645034",
    },
    Object {
      "type": "ResourceType",
      "uri": "https://fedlex.data.admin.ch/vocabulary/resource-type/31",
    },
    Object {
      "references": Object {
        "isRealizedBy": Array [
          "http://resource/Expression/7-1591712649311",
        ],
      },
      "type": "TreatyDocument",
      "uri": "http://resource/TreatyDocument/8-1591712649311",
    },
    Object {
      "attributes": Object {
        "title": Object {
          "xsd:string": "there-it-is.gif",
        },
      },
      "references": Object {
        "isEmbodiedBy": Array [
          "http://resource/Manifestation/6-1591712649311",
        ],
      },
      "type": "Expression",
      "uri": "http://resource/Expression/7-1591712649311",
    },
    Object {
      "attributes": Object {
        "fileName": Object {
          "xsd:string": "there-it-is.gif",
        },
        "isExemplifiedBy": Object {
          "rdfs:Resource": "http://resource/Resource/5-1591712649311",
        },
        "uploadBy": Object {
          "xsd:string": "John Doe",
        },
      },
      "references": Object {
        "uploadDate": "2020-06-09T14:24:09.311Z",
      },
      "type": "Manifestation",
      "uri": "http://resource/Manifestation/6-1591712649311",
    },
    Object {
      "attributes": Object {
        "languageLabel": Object {
          "xsd:string": Array [],
        },
        "treatyComment": Object {
          "xsd:string": Array [],
        },
      },
      "type": "TreatySignature",
      "uri": "http://resource/TreatySignature/1-1591712631407",
    },
    Object {
      "type": "EntryIntoForce",
      "uri": "http://resource/EntryIntoForce/2-1591712631410",
    },
    Object {
      "type": "TreatyType",
      "uri": "https://fedlex.data.admin.ch/vocabulary/treaty-type/1",
    },
  ],
}
`;

exports[`ResourceGraphService should transform ResourceGraph 1 to JsonModel 1`] = `
Object {
  "@context": Object {
    "rootUri": "http://data.legilux.public.lu/resource/authority/draft-document-type/1",
  },
  "@facets": Object {
    "some": "thing",
  },
  "@id": "http://data.legilux.public.lu/resource/authority/draft-document-type/1",
  "@type": "Concept",
  "created": Array [
    2018-03-01T00:00:00.000Z,
  ],
  "definition": Object {
    "fr": Array [
      "Documents concernant le projet d'arrêté grand-ducal (texte de l'arrêté et pièces afférentes)",
    ],
  },
  "inScheme": Array [
    Object {
      "@context": Object {
        "rootUri": "http://data.legilux.public.lu/resource/authority/draft-document-type/1",
      },
      "@id": "http://data.legilux.public.lu/resource/authority/draft-document-type",
      "@type": "ConceptScheme",
    },
  ],
  "prefLabel": Object {
    "fr": Array [
      "projet d'arrêté grand-ducal",
    ],
  },
  "status": Array [
    Object {
      "@context": Object {
        "rootUri": "http://data.legilux.public.lu/resource/authority/draft-document-type/1",
      },
      "@id": "http://publications.europa.eu/resource/authority/concept-status/CURRENT",
      "@type": "Concept",
      "authorityCode": Array [
        "CURRENT",
      ],
      "identifier": Array [
        "CURRENT",
      ],
      "inScheme": Array [
        Object {
          "@context": Object {
            "rootUri": "http://data.legilux.public.lu/resource/authority/draft-document-type/1",
          },
          "@id": "http://publications.europa.eu/resource/authority/concept-status",
          "@type": "ConceptScheme",
        },
      ],
      "opCode": Array [
        "CURRENT",
      ],
      "prefLabel": Object {
        "bg": Array [
          "актуално",
        ],
        "cs": Array [
          "stávájící",
        ],
        "da": Array [
          "gældende",
        ],
        "de": Array [
          "aktuell",
        ],
        "el": Array [
          "ισχύει",
        ],
        "en": Array [
          "current",
        ],
        "es": Array [
          "actual",
        ],
        "et": Array [
          "praegune",
        ],
        "fi": Array [
          "nykyinen",
        ],
        "fr": Array [
          "en vigueur",
        ],
        "ga": Array [
          "i bhfeidhm",
        ],
        "hr": Array [
          "trenutačni",
        ],
        "hu": Array [
          "aktuális",
        ],
        "it": Array [
          "attuale",
        ],
        "lt": Array [
          "dabartinis",
        ],
        "lv": Array [
          "pašreizējs",
        ],
        "mt": Array [
          "attwali",
        ],
        "nl": Array [
          "actueel",
        ],
        "pl": Array [
          "obecny",
        ],
        "pt": Array [
          "comum",
        ],
        "ro": Array [
          "actual",
        ],
        "sk": Array [
          "súčasný",
        ],
        "sl": Array [
          "sedanje",
        ],
        "sv": Array [
          "gällande",
        ],
      },
      "startUse": Array [
        "2009-12-01",
      ],
    },
  ],
  "topConceptOf": Array [
    Object {
      "@context": Object {
        "rootUri": "http://data.legilux.public.lu/resource/authority/draft-document-type/1",
      },
      "@id": "http://data.legilux.public.lu/resource/authority/draft-document-type",
      "@type": "ConceptScheme",
    },
  ],
}
`;

exports[`ResourceGraphService should transform ResourceGraph 2 to JsonModel 1`] = `
Object {
  "@context": Object {
    "rootUri": "http://publications.europa.eu/resource/cellar/3b417b98-d0e9-11e1-905c-01aa75ed71a1",
  },
  "@id": "http://publications.europa.eu/resource/cellar/3b417b98-d0e9-11e1-905c-01aa75ed71a1",
  "@type": Array [
    "EUDossier",
    "Event",
  ],
  "eventRiskLevel": Array [
    "4 or something",
  ],
  "identifier": Array [
    "1983/1041/CNS",
  ],
  "initiatedByActPreparatory": Array [
    Object {
      "@context": Object {
        "rootUri": "http://publications.europa.eu/resource/cellar/3b417b98-d0e9-11e1-905c-01aa75ed71a1",
      },
      "@id": "http://publications.europa.eu/resource/cellar/bf93a1e3-0c39-11e4-a7d0-01aa75ed71a1",
      "@type": Array [
        "EUPreparatoryAct",
        "Work",
      ],
      "dateDocument": Array [
        1983-12-20T00:00:00.000Z,
      ],
      "preparatoryActCelexId": Array [
        "51983PC0786",
      ],
      "preparatoryActReference": Array [
        "CS/1983/11591/83/FISC111",
        "JO C/1984/17/6",
        "COM/1983/786/FINAL",
        "1/1983/1307",
      ],
      "responsibilityOfEUInstitution": Array [
        Object {
          "@context": Object {
            "rootUri": "http://publications.europa.eu/resource/cellar/3b417b98-d0e9-11e1-905c-01aa75ed71a1",
          },
          "@id": "http://publications.europa.eu/resource/authority/corporate-body/DG15",
          "@type": Array [
            "Concept",
            "EULegalInstitution",
          ],
        },
      ],
      "title": Object {
        "fr": Array [
          "PROPOSITION DE DIRECTIVE DU CONSEIL PROROGEANT LA DEROGATION ACCORDEE A L' IRLANDE EN MATIERE DE TAXES SUR LE CHIFFRE D' AFFAIRES ET D' ACCISES APPLICABLES DANS LE TRAFIC INTERNATIONAL DE VOYAGEURS",
        ],
      },
    },
  ],
  "initiatesTransposition": Object {
    "@context": Object {
      "rootUri": "http://publications.europa.eu/resource/cellar/3b417b98-d0e9-11e1-905c-01aa75ed71a1",
    },
    "@id": "http://data.legilux.public.lu/resource/transposition/e9ce66c3-c0cf-477b-bf57-eae1c4c1e8f6",
    "@type": Array [
      "Event",
      "Transposition",
    ],
    "hasTranspositionAction": Array [
      Object {
        "@context": Object {
          "rootUri": "http://publications.europa.eu/resource/cellar/3b417b98-d0e9-11e1-905c-01aa75ed71a1",
        },
        "@id": "http://data.legilux.public.lu/resource/transpositionaction/636d0338-0c7a-4e5e-9a1e-5501199f7c17",
        "@type": Array [
          "Event",
          "TranspositionAction",
        ],
        "created": 2019-09-12T05:04:37.039Z,
        "transpositionActionType": Object {
          "@context": Object {
            "rootUri": "http://publications.europa.eu/resource/cellar/3b417b98-d0e9-11e1-905c-01aa75ed71a1",
          },
          "@id": "http://data.legilux.public.lu/resource/authority/transposition-action-type/6",
          "@type": Array [
            "Concept",
            "TranspositionActionType",
          ],
        },
      },
    ],
    "transpositionRequestedCorrespondenceTable": false,
  },
  "isAboutConceptTypeDossier": Array [
    Object {
      "@context": Object {
        "rootUri": "http://publications.europa.eu/resource/cellar/3b417b98-d0e9-11e1-905c-01aa75ed71a1",
      },
      "@id": "http://publications.europa.eu/resource/authority/fd_612/1130",
      "@type": Array [
        "Concept",
        "EUDossierType",
      ],
    },
  ],
  "title": Object {
    "fr": Array [
      "PROPOSITION DE DIRECTIVE DU CONSEILPROROGEANT LA DEROGATION ACCORDEE A L'IRLANDE EN MATIERE DE TAXES SUR LE CHIFFRE D'AFFAIRES ET D'ACCISES APPLICABLES DANS LE TRAFIC INTERNATIONAL DE VOYAGEURS",
    ],
  },
}
`;

exports[`ResourceGraphService should transform ResourceGraph 3 to JsonModel 1`] = `
Object {
  "@context": Object {
    "rootUri": "http://publications.europa.eu/resource/cellar/6b71aff2-d243-11e1-905c-01aa75ed71a1",
  },
  "@id": "http://publications.europa.eu/resource/cellar/6b71aff2-d243-11e1-905c-01aa75ed71a1",
  "@type": Array [
    "EUDossier",
    "Event",
  ],
  "identifier": Array [
    "1990/0313/COD",
  ],
  "initiatedByActPreparatory": Array [
    Object {
      "@context": Object {
        "rootUri": "http://publications.europa.eu/resource/cellar/6b71aff2-d243-11e1-905c-01aa75ed71a1",
      },
      "@id": "http://publications.europa.eu/resource/cellar/2224d5cc-2c56-429a-b9a8-5d13207dbed1",
      "@type": Array [
        "EUPreparatoryAct",
        "Work",
      ],
      "dateDocument": Array [
        1990-11-20T00:00:00.000Z,
      ],
      "preparatoryActCelexId": Array [
        "51990PC0525",
      ],
      "preparatoryActReference": Array [
        "CS/1990/10402",
        "COM/1990/525/FINAL",
        "JO C/1990/306/7",
      ],
      "preparatoryActSubject": Array [
        Object {
          "@context": Object {
            "rootUri": "http://publications.europa.eu/resource/cellar/6b71aff2-d243-11e1-905c-01aa75ed71a1",
          },
          "@id": "http://eurovoc.europa.eu/3167",
          "@type": "Concept",
        },
        Object {
          "@context": Object {
            "rootUri": "http://publications.europa.eu/resource/cellar/6b71aff2-d243-11e1-905c-01aa75ed71a1",
          },
          "@id": "http://eurovoc.europa.eu/1015",
          "@type": "Concept",
        },
        Object {
          "@context": Object {
            "rootUri": "http://publications.europa.eu/resource/cellar/6b71aff2-d243-11e1-905c-01aa75ed71a1",
          },
          "@id": "http://eurovoc.europa.eu/4078",
          "@type": "Concept",
        },
        Object {
          "@context": Object {
            "rootUri": "http://publications.europa.eu/resource/cellar/6b71aff2-d243-11e1-905c-01aa75ed71a1",
          },
          "@id": "http://eurovoc.europa.eu/4585",
          "@type": "Concept",
        },
        Object {
          "@context": Object {
            "rootUri": "http://publications.europa.eu/resource/cellar/6b71aff2-d243-11e1-905c-01aa75ed71a1",
          },
          "@id": "http://eurovoc.europa.eu/206",
          "@type": "Concept",
        },
        Object {
          "@context": Object {
            "rootUri": "http://publications.europa.eu/resource/cellar/6b71aff2-d243-11e1-905c-01aa75ed71a1",
          },
          "@id": "http://eurovoc.europa.eu/978",
          "@type": "Concept",
        },
        Object {
          "@context": Object {
            "rootUri": "http://publications.europa.eu/resource/cellar/6b71aff2-d243-11e1-905c-01aa75ed71a1",
          },
          "@id": "http://eurovoc.europa.eu/2591",
          "@type": "Concept",
        },
      ],
      "responsibilityOfEUInstitution": Array [
        Object {
          "@context": Object {
            "rootUri": "http://publications.europa.eu/resource/cellar/6b71aff2-d243-11e1-905c-01aa75ed71a1",
          },
          "@id": "http://publications.europa.eu/resource/authority/corporate-body/TAXUD",
          "@type": Array [
            "Concept",
            "EULegalInstitution",
          ],
        },
      ],
      "title": Object {
        "fr": Array [
          "PROPOSITION DE DIRECTIVE DU PARLEMENT EUROPEEN ET DU CONSEIL MODIFIANT LA DIRECTIVE 76/308/CEE CONCERNANT L' ASSISTANCE MUTUELLE EN MATIERE DE RECOUVREMENT DES CREANCES RESULTANT D' OPERATIONS FAISANT PARTIE DU SYSTEME DE FINANCEMENT DU FONDS EUROPEEN D' ORIENTATION ET DE GARANTIE AGRICOLE, AINSI QUE DE PRELEVEMENTS AGRICOLES ET DE DROITS DE DOUANE, ET RELATIVE A LA TAXE SUR LA VALEUR AJOUTEE",
        ],
      },
    },
  ],
  "initiatesTransposition": Object {
    "@context": Object {
      "rootUri": "http://publications.europa.eu/resource/cellar/6b71aff2-d243-11e1-905c-01aa75ed71a1",
    },
    "@id": "http://data.legilux.public.lu/resource/transposition/7b8834e4-2016-4605-9fe1-c66418f6f62d",
    "@type": Array [
      "Event",
      "Transposition",
    ],
    "hasTranspositionAction": Array [
      Object {
        "@context": Object {
          "rootUri": "http://publications.europa.eu/resource/cellar/6b71aff2-d243-11e1-905c-01aa75ed71a1",
        },
        "@id": "http://data.legilux.public.lu/resource/transpositionaction/2d55604c-2322-4984-a275-785d75094163",
        "@type": Array [
          "Event",
          "TranspositionAction",
        ],
        "created": 2019-09-12T05:04:56.336Z,
        "transpositionActionType": Object {
          "@context": Object {
            "rootUri": "http://publications.europa.eu/resource/cellar/6b71aff2-d243-11e1-905c-01aa75ed71a1",
          },
          "@id": "http://data.legilux.public.lu/resource/authority/transposition-action-type/6",
          "@type": Array [
            "Concept",
            "TranspositionActionType",
          ],
        },
      },
    ],
    "transpositionRequestedCorrespondenceTable": false,
  },
  "isAboutConceptTypeDossier": Array [
    Object {
      "@context": Object {
        "rootUri": "http://publications.europa.eu/resource/cellar/6b71aff2-d243-11e1-905c-01aa75ed71a1",
      },
      "@id": "http://publications.europa.eu/resource/authority/fd_612/1130",
      "@type": Array [
        "Concept",
        "EUDossierType",
      ],
    },
  ],
  "title": Object {
    "fr": Array [
      "PROPOSITION DE DIRECTIVE DU PARLEMENT EUROPEEN ET DU CONSEILMODIFIANT LA DIRECTIVE 76/308/CEE CONCERNANT L'ASSISTANCE MUTUELLE EN MATIERE DE RECOUVREMENT DES CREANCES RESULTANT D'OPERATIONS FAISANT PARTIE DU SYSTEME DE FINANCEMENT DU FONDS EUROPEEN D'ORIENTATION ET DE GARANTIE AGRICOLE, AINSI QUE DE PRELEVEMENTS AGRICOLES ET DE DROITS DE DOUANE, ET RELATIVE A LA TAXE SUR LA VALEUR AJOUTEE",
    ],
  },
}
`;

exports[`ResourceGraphService should transform ResourceGraph 4 to JsonModel 1`] = `
Object {
  "@context": Object {
    "rootUri": "https://fedlex.data.admin.ch/eli/oc/2014/797",
  },
  "@id": "https://fedlex.data.admin.ch/eli/oc/2014/797",
  "@type": Array [
    "Act",
    "Work",
  ],
  "dateDocument": Array [
    2014-12-23T00:00:00.000Z,
  ],
  "dateEntryInForce": Array [
    2015-01-01T00:00:00.000Z,
  ],
  "isRealizedBy": Array [
    Object {
      "@context": Object {
        "rootUri": "https://fedlex.data.admin.ch/eli/oc/2014/797",
      },
      "@id": "https://fedlex.data.admin.ch/eli/oc/2014/797/it",
      "@type": "Expression",
      "isEmbodiedBy": Array [
        Object {
          "@context": Object {
            "rootUri": "https://fedlex.data.admin.ch/eli/oc/2014/797",
          },
          "@id": "https://fedlex.data.admin.ch/eli/oc/2014/797/it/doc",
          "@type": "Manifestation",
          "isExemplifiedBy": Array [
            "http://cpo-data.cogni.zone/20161206/kavworkflow/X/i/as/2014/4715.doc",
          ],
        },
        Object {
          "@context": Object {
            "rootUri": "https://fedlex.data.admin.ch/eli/oc/2014/797",
          },
          "@id": "https://fedlex.data.admin.ch/eli/oc/2014/797/it/pdf",
          "@type": "Manifestation",
          "isExemplifiedBy": Array [
            "http://cpo-data.cogni.zone/20161206/kavworkflow/X/i/as/2014/4715.pdf",
          ],
        },
      ],
    },
    Object {
      "@context": Object {
        "rootUri": "https://fedlex.data.admin.ch/eli/oc/2014/797",
      },
      "@id": "https://fedlex.data.admin.ch/eli/oc/2014/797/fr",
      "@type": "Expression",
      "isEmbodiedBy": Array [
        Object {
          "@context": Object {
            "rootUri": "https://fedlex.data.admin.ch/eli/oc/2014/797",
          },
          "@id": "https://fedlex.data.admin.ch/eli/oc/2014/797/fr/pdf",
          "@type": "Manifestation",
          "isExemplifiedBy": Array [
            "http://cpo-data.cogni.zone/20161206/kavworkflow/X/f/as/2014/4715.pdf",
          ],
        },
        Object {
          "@context": Object {
            "rootUri": "https://fedlex.data.admin.ch/eli/oc/2014/797",
          },
          "@id": "https://fedlex.data.admin.ch/eli/oc/2014/797/fr/doc",
          "@type": "Manifestation",
          "isExemplifiedBy": Array [
            "http://cpo-data.cogni.zone/20161206/kavworkflow/X/f/as/2014/4715.doc",
          ],
        },
      ],
    },
    Object {
      "@context": Object {
        "rootUri": "https://fedlex.data.admin.ch/eli/oc/2014/797",
      },
      "@id": "https://fedlex.data.admin.ch/eli/oc/2014/797/de",
      "@type": "Expression",
      "isEmbodiedBy": Array [
        Object {
          "@context": Object {
            "rootUri": "https://fedlex.data.admin.ch/eli/oc/2014/797",
          },
          "@id": "https://fedlex.data.admin.ch/eli/oc/2014/797/de/pdf",
          "@type": "Manifestation",
          "isExemplifiedBy": Array [
            "http://cpo-data.cogni.zone/20161206/kavworkflow/X/d/as/2014/4715.pdf",
          ],
        },
        Object {
          "@context": Object {
            "rootUri": "https://fedlex.data.admin.ch/eli/oc/2014/797",
          },
          "@id": "https://fedlex.data.admin.ch/eli/oc/2014/797/de/doc",
          "@type": "Manifestation",
          "isExemplifiedBy": Array [
            "http://cpo-data.cogni.zone/20161206/kavworkflow/X/d/as/2014/4715.doc",
          ],
        },
      ],
    },
  ],
  "publicationDate": Array [
    2014-12-23T00:00:00.000Z,
  ],
}
`;

exports[`ResourceGraphService should transform ResourceGraph 5 to JsonModel (circular graph) 1`] = `
Object {
  "@context": Object {
    "rootUri": "uri1",
  },
  "@id": "uri1",
  "@type": "root",
  "child": Object {
    "@context": Object {
      "rootUri": "uri1",
    },
    "@id": "uri2",
    "@type": "root",
    "child": Object {
      "@context": Object {
        "rootUri": "uri1",
      },
      "@id": "uri3",
      "@type": "grandChild",
      "grandParent": [Circular],
    },
  },
}
`;
